--- a/Frontend-FNT/src/views/Landing Page/landingPage.css
+++ b/Frontend-FNT/src/views/Landing Page/landingPage.css
@@ -44,3 +44,174 @@
 .Start-your-Journey{
     margin-right:10px;
 }
+
+
+
+/* Feature Section  */
+
+.feature-section{
+    height:25em;
+    width:100%;
+    /* border:2px solid black; */
+    margin-top:2em;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #F3F3F3;
+}
+
+.FS-heading-Tagline{
+    height:10em;
+    width:100%;
+    /* border:2px solid black; */
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+}
+
+.FS-heading-Tagline h1{
+    margin-bottom:0.5em;
+}
+
+.FS-heading-Tagline p{
+    color:grey;
+    font-weight: bold;
+}
+
+.FS-features{
+    height:13em;
+    width:100%;
+    /* border:2px solid black; */
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+}
+
+.feature{
+    height:13em;
+    width:22%;
+    /* border:2px solid black; */
+    display:flex;
+    justify-content:space-evenly;
+    align-items:start;
+    flex-direction: column;
+    border-radius:10px;
+    background-color: white;
+}
+
+.iconDiv{
+    height:3em;
+    width:2em;
+    /* border:2px solid black; */
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background-color: black;
+    border-radius:5px;
+}
+
+.feature h1{
+    font-size: large;
+    font-weight: bold;
+}
+
+.feature p{
+    color:grey;
+    font-weight: bold;
+}
+
+
+/* Image section */
+
+.ImgSection{
+    height:20em;
+    width:100%;
+    /* border:2px solid black; */
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+    /* margin-top: 2em; */
+
+}
+
+.IS-trackAnywhere{
+    height:18em;
+    width:40%;
+    /* border:2px solid black; */
+    border-radius:15px;
+    /* background-image:url(../../assets/IS-trackAnywhere.jpg); */
+    background-size: cover;
+    background-repeat:no-repeat;
+    /* filter: brightness(60%); */
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    color:white;
+
+    position: relative;
+    /* width: 40%;
+    height: 18em; */
+    overflow: hidden;
+}
+
+.IS-trackAnywhere * {
+    position: relative;
+    z-index: 2;
+}
+
+.IS-trackAnywhere::before{
+    content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('../../assets/IS-trackAnywhere.jpg');
+      background-size: cover;
+      background-position: center;
+      opacity: 0.95; /* Reduces background opacity */
+      z-index: 1; /* Keeps the pseudo-element behind the text */
+}
+
+.IS-smartRecomm{
+    height:18em;
+    width:40%;
+    /* border:2px solid black; */
+    border-radius:15px;
+    /* background-image:url(../../assets/IS-smartRecommendation.jpg); */
+    background-size: cover;
+    background-repeat:no-repeat;
+    /* filter: brightness(60%); */
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    color:white;
+
+    position: relative;
+    /* width: 40%;
+    height: 18em; */
+    overflow: hidden;
+}
+
+.IS-smartRecomm * {
+    position: relative;
+    z-index: 2;
+}
+
+.IS-smartRecomm::before{
+    content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('../../assets/IS-smartRecommendation.jpg');
+      background-size: cover;
+      background-position: center;
+      opacity: 0.95; /* Reduces background opacity */
+      z-index: 1; /* Keeps the pseudo-element behind the text */
+}
