--- a/Frontend-FNT/src/components/Header/Header.css
+++ b/Frontend-FNT/src/components/Header/Header.css
@@ -24,10 +24,10 @@ img{
     font-family:Arial, Helvetica, sans-serif;
 } */
 
-a{
+.page-rd-links a{
     text-decoration: none;
     height:3.5em;
-    width:5em;
+    width:6em;
     /* border:2px solid black; */
     display:flex;
     justify-content:center;
@@ -37,7 +37,7 @@ a{
     color:grey;
 }
 
-a:hover{
+.page-rd-links a:hover{
     border-bottom:3.5px solid black;
     color:black;
 }
