--- a/Frontend-FNT/src/views/Landing Page/landingPage.css
+++ b/Frontend-FNT/src/views/Landing Page/landingPage.css
@@ -50,7 +50,7 @@
 /* Feature Section  */
 
 .feature-section{
-    height:25em;
+    /* height:25em; */
     width:100%;
     /* border:2px solid black; */
     margin-top:2em;
@@ -59,16 +59,19 @@
     align-items: center;
     flex-direction: column;
     background-color: #F3F3F3;
+    padding:2em 0;
 }
 
 .FS-heading-Tagline{
-    height:10em;
+    /* height:10em; */
     width:100%;
     /* border:2px solid black; */
     display:flex;
     justify-content:center;
     align-items:center;
     flex-direction:column;
+    padding:2em 0;
+
 }
 
 .FS-heading-Tagline h1{
@@ -81,12 +84,14 @@
 }
 
 .FS-features{
-    height:13em;
+    /* height:13em; */
     width:100%;
     /* border:2px solid black; */
     display:flex;
     justify-content:space-evenly;
     align-items:center;
+    padding:2em 0;
+
 }
 
 .feature{
@@ -99,6 +104,7 @@
     flex-direction: column;
     border-radius:10px;
     background-color: white;
+    padding:1em;
 }
 
 .iconDiv{
@@ -126,13 +132,14 @@
 /* Image section */
 
 .ImgSection{
-    height:20em;
-    width:100%;
+    /* height:20em; */
+    /* width:100%; */
     /* border:2px solid black; */
     display:flex;
     justify-content:space-evenly;
     align-items:center;
     /* margin-top: 2em; */
+    padding:3em 0;
 
 }
 
